test_suite5/ALAN/test_suite/alan-2022-examples/failing/003460_mutation.alan
source wY begin if 050 then relax elsif 937 source relax end end
